[gd_scene load_steps=2 format=3 uid="uid://d1wde4dqoyc24"]

[ext_resource type="Script" uid="uid://b5r2kawy6ojrt" path="res://UI/upgrade_preview.gd" id="1_uqt6y"]

[node name="UpgradePreview" type="MarginContainer"]
custom_minimum_size = Vector2(280, 400)
offset_right = 280.0
offset_bottom = 400.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8
script = ExtResource("1_uqt6y")

[node name="UpgradeCard" type="ColorRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 400)
layout_mode = 2
size_flags_vertical = 4
color = Color(0.686275, 0.690196, 0.811765, 1)

[node name="ItemImage" type="ColorRect" parent="UpgradeCard"]
visible = false
layout_mode = 0
offset_left = 108.0
offset_top = 55.0
offset_right = 172.0
offset_bottom = 119.0

[node name="Icon" type="TextureRect" parent="UpgradeCard/ItemImage"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="LabelName" type="Label" parent="UpgradeCard"]
layout_mode = 0
offset_left = 10.0
offset_top = 134.0
offset_right = 270.0
offset_bottom = 186.0
text = "Item name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusContainer" type="VBoxContainer" parent="UpgradeCard"]
layout_mode = 2
offset_left = 10.0
offset_top = 177.0
offset_right = 270.0
offset_bottom = 356.0

[node name="Cost" type="Label" parent="UpgradeCard"]
layout_mode = 2
offset_left = 10.0
offset_top = 360.0
offset_right = 266.0
offset_bottom = 383.0
text = "Cost"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="UpgradeCard"]
offset_left = 109.0
offset_top = 59.0
offset_right = 173.0
offset_bottom = 123.0

[connection signal="mouse_entered" from="UpgradeCard" to="." method="_on_upgrade_card_mouse_entered"]
[connection signal="mouse_exited" from="UpgradeCard" to="." method="_on_upgrade_card_mouse_exited"]
